# crucible-stack

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
crucible_stack/: __init__.py
crucible_stack/capital/: __init__.py  bands.py  equity.py
crucible_stack/engine/: exits.py  simulator.py
crucible_stack/framework/: __init__.py  config.py  montecarlo.py  registry.py  strategy.py
crucible_stack/optimize/: __init__.py  select.py  simulators.py  sweep.py  trial_matrix.py
crucible_stack/orchestrate/: __init__.py  __main__.py  account_drift.py  drift.py  gate.py  ledger.py  runner.py  trigger.py
docs/: api-stability.md  architecture.md  orchestrate.md  toolchain.md
docs/adr/: ADR-0003-deployment-orchestrator-as-stateful-reoptimization-loop.md  ADR-0004-public-framework-private-strategies.md
docs/design/: seam-contracts.md
tests/: __init__.py  test_account_drift.py  test_boundaries.py  test_capital_equity.py  test_crucible_compat.py  test_drift.py  test_gate.py  test_ledger.py  test_no_findings_in_prose.py  test_public_api.py  test_runner.py  test_select.py  test_select_objective.py  test_simulator_entry_delay.py  test_sweep.py  test_sweep_shared_ledger.py  test_trial_matrix.py  test_trigger.py
