[build-system]
requires = ["setuptools>=68,<81", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crucible-stack"
version = "0.1.0.dev0"
description = "A framework for defining, searching, sizing and deploying trading strategies. Strategies not included."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Matt Spinola"}]
dependencies = [
    "numpy>=2.0",
    "pandas>=2.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    # NOTE: this pin is weaker than the real requirement, deliberately. We need the
    # honest-N API -- deflated_sharpe(..., n_trials=) and sidak_correction(SearchSpaceLog)
    # -- which landed AFTER the v0.2.0 tag, so published 0.2.0 does not actually satisfy
    # us. Bump to ">=0.3.0" once that release exists.
    #
    # It is not written as a direct git reference, which was the first attempt: a URL
    # requirement cannot be reconciled with a consumer that installs crucible from a local
    # editable checkout, and npf does exactly that. It broke npf's CI with a
    # ResolutionImpossible. A direct reference would also block PyPI upload.
    #
    # The version constraint is therefore documentation; tests/test_crucible_compat.py is
    # the actual enforcement, and it fails with an explanation rather than a TypeError
    # from inside select().
    "crucible>=0.2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
include = ["crucible_stack*"]
