[build-system]
requires = ["setuptools>=68,<81", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crucible-stack"
version = "0.1.0.dev0"
description = "A framework for defining, searching, sizing and deploying trading strategies. Strategies not included."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Matt Spinola"}]
dependencies = [
    "numpy>=2.0",
    "pandas>=2.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    # 0.3.0 is the release that carries the honest-N API this package depends on:
    # deflated_sharpe(..., n_trials=) and sidak_correction(SearchSpaceLog). Published
    # 2026-07-22, so the constraint is finally true rather than aspirational.
    #
    # Kept as a normal version constraint, never a direct git reference. A URL
    # requirement cannot be reconciled with a consumer that installs crucible from a
    # local editable checkout, and npf does exactly that; the first attempt at this
    # broke npf CI with a ResolutionImpossible, and a direct reference also blocks
    # PyPI upload.
    #
    # tests/test_crucible_compat.py remains the real enforcement. A version number is
    # not evidence that an API is present, which is the whole reason that test exists.
    "crucible>=0.3.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
include = ["crucible_stack*"]
