[build-system]
requires = ["setuptools>=68,<81", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crucible-stack"
version = "0.1.0"
description = "A framework for defining, searching, sizing and deploying trading strategies. Strategies not included."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Matt Spinola"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "numpy>=2.0",
    "pandas>=2.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    # 0.3.0 is the release that carries the honest-N API this package depends on:
    # deflated_sharpe(..., n_trials=) and sidak_correction(SearchSpaceLog). Published
    # 2026-07-22, so the constraint is finally true rather than aspirational.
    #
    # Kept as a normal version constraint, never a direct git reference. A URL
    # requirement cannot be reconciled with a consumer that installs crucible from a
    # local editable checkout, and npf does exactly that; the first attempt at this
    # broke npf CI with a ResolutionImpossible, and a direct reference also blocks
    # PyPI upload.
    #
    # tests/test_crucible_compat.py remains the real enforcement. A version number is
    # not evidence that an API is present, which is the whole reason that test exists.
    "crucible>=0.3.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.1.0"]

[project.urls]
Homepage = "https://github.com/mspinola/crucible-stack"
Source = "https://github.com/mspinola/crucible-stack"

[tool.setuptools.packages.find]
include = ["crucible_stack*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
